15188
```scala
trait A {
 trait C[+T] { 
   protected[this] def f(t: T) {}
 } 
 
 trait D[T] extends C[T] {
   def g(t: T) { f(t) } 
 }
}
```

gives:
```scala
a.scala:3: error: covariant type T occurs in contravariant position in type T of value t
   protected[this] def f(t: T) {}
                         ^
one error found
```

Compiles if `g` doesn't call `f` or if `C` and `D` are top-level traits. Seems to be related to scala/bug#465.
